--- a/src/main/resources/view/view.fxml
+++ b/src/main/resources/view/view.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.java.tracker.controller.Controller">
+<StackPane xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.rengreen.tracker.controller.Controller">
     <children>
         <GridPane prefHeight="600.0" prefWidth="800.0">
             <columnConstraints>
